src/objects/PMF_Finca_Categoria_8_Gestion_ambienta__c.object
<CustomObject>
    <fields>
        <fullName>Fecha__c</fullName>
        <label>Fecha</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Manejo_aguas_residuales_hogar_benef__c</fullName>
        <label>Manejo aguas residuales (hogar/benef)</label>
        <picklist>
            <picklistValues>
                <fullName>Las vierte en fuente de agua sin tratar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Las vierte en pozos de infiltración</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Escurrimiento superficial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Planta de tratamiento de aguas mieles</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>La utiliza como modo de fertilización</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Otros</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Manejo_alternativo_aguas_de_beneficio__c</fullName>
        <label>Manejo alternativo aguas de beneficio</label>
        <picklist>
            <picklistValues>
                <fullName>Las vierte en fuente de agua sin tratar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Las vierte en pozos de infiltración</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Escurrimiento superficial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Planta de tratamiento de aguas mieles</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>La utiliza como modo de fertilización</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Otros</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Nivel_categoria__c</fullName>
        <formula>IF( Puntaje_categoria__c &lt; 2, &apos;c. Bajo&apos;, IF (Puntaje_categoria__c &lt; 4, &apos;b. Medio&apos;, &apos;a. Alto&apos;))</formula>
        <label>Nivel categoría</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nombre_categoria__c</fullName>
        <formula>&apos;Gestión ambiental&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Nombre categoría</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nombre_tipo_fecha__c</fullName>
        <formula>Nombre_categoria__c + &apos; &apos; +  TEXT(Tipo__c) + &apos; &apos; + TEXT(Fecha__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Nombre tipo fecha</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Plan_Consevaci_n_y_Recuper_Flora_y_Fauna__c</fullName>
        <label>Plan Consevación y Recuper Flora y Fauna</label>
        <picklist>
            <picklistValues>
                <fullName>Si se cumple</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Se cumple parcialmente</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No se cumple</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Plan_de_Manejo_de_Finca__c</fullName>
        <label>Plan de Manejo de Finca</label>
        <referenceTo>Farm_Management_Plan__c</referenceTo>
        <relationshipLabel>PMF Finca Categoria 8 - Gestion ambient</relationshipLabel>
        <relationshipName>PMF_Finca_Categorias_8_Gestion_ambient</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Puntaje_Manejo_alternativo_aguas_benef__c</fullName>
        <formula>IF( INCLUDES(  Manejo_alternativo_aguas_de_beneficio__c , &apos;La utiliza como modo de fertilización&apos;) , 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Puntaje Manejo alternativo aguas benef</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Puntaje_Manejo_de_aguas_residuales__c</fullName>
        <formula>IF(
 OR (
  INCLUDES( Manejo_aguas_residuales_hogar_benef__c, &apos;Las vierte en pozos de infiltración&apos;),
  INCLUDES( Manejo_aguas_residuales_hogar_benef__c, &apos;Planta de tratamiento de aguas mieles&apos;)
 )
, 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Puntaje Manejo de aguas residuales</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Puntaje_Plan_Consevaci_n_Flora_y_Fauna__c</fullName>
        <formula>IF( ISPICKVAL(  Plan_Consevaci_n_y_Recuper_Flora_y_Fauna__c , &apos;Si se cumple&apos;) , 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Puntaje Plan Consevación Flora y Fauna</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Puntaje_Transformacion_pulpas_uso_cultiv__c</fullName>
        <formula>IF( INCLUDES(  Transformaci_n_pulpas_uso_en_cultivo__c , &apos;Procesa en compost en cuanto es posible&apos;) , 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Puntaje Transformación pulpas uso cultiv</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Puntaje_categoria__c</fullName>
        <formula>Puntaje_Manejo_de_aguas_residuales__c + 
Puntaje_Manejo_alternativo_aguas_benef__c + 
Puntaje_Transformacion_pulpas_uso_cultiv__c + 
Puntaje_Plan_Consevaci_n_Flora_y_Fauna__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Puntaje categoría</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tipo__c</fullName>
        <label>Tipo</label>
        <picklist>
            <picklistValues>
                <fullName>Línea base</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Metas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Seguimiento</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Transformaci_n_pulpas_uso_en_cultivo__c</fullName>
        <label>Transformación pulpas uso en cultivo</label>
        <picklist>
            <picklistValues>
                <fullName>La escurre</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>La protege de la lluvia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Procesa en compost en cuanto es posible</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lo vende sin procesar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>La amontona sin protección</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lo vierte al río</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>La bota</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Otros</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <label>PMF Finca Categ. 8 - Gestion ambiental</label>
    <nameField>
        <displayFormat>{0000000}</displayFormat>
        <label>PMF Finca Categoria 8 - Gestion ambienta</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PMF Finca Categorias 8 - Gestion ambient</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>